--- a/app/src/main/res/layout/activity_adopt.xml
+++ b/app/src/main/res/layout/activity_adopt.xml
@@ -31,4 +31,16 @@
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/adopt_adopt"
+        android:id="@+id/adopt_btn_Adopt"
+        android:background="@mipmap/btn_cute"
+        android:allowUndo="false"
+        android:alpha="1"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp" />
 </RelativeLayout>
