Added new features
- Added purr sound when petting.
- Added top menu
- Added feed time

- Restructured the code to be more flexible.

--- a/app/src/main/res/layout/activity_adopt.xml
+++ b/app/src/main/res/layout/activity_adopt.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="net.ledii.kittyfit.kittyfit.AdoptActivity"
     android:background="@mipmap/bg_room_empty"
     android:backgroundTint="#009d0f"
@@ -42,5 +38,22 @@
         android:alpha="1"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="43dp" />
+        android:layout_marginTop="20dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/adopt_txt_Name"
+        android:layout_below="@+id/adopt_btn_Adopt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="#ffffff"
+        android:visibility="invisible"
+        android:hint="Name your kitten"
+        android:inputType="text|textCapWords"
+        android:textColor="#010101"
+        android:textColorHint="#61010101"
+        android:maxLength="24" />
+
 </RelativeLayout>
